# creg

./: .gitignore  .travis.yml  Jamroot  LICENSE  Makefile.am  README.md  configure.ac  setup.py  setup.py.in
creg/: Jamfile  Makefile.am  cnlreg.cc  creg.cc  dict.h  fast_sparse_vector.h  fdict.cc  fdict.h  feature_map.h  filelib.h  json_feature_map_lexer.cc  json_feature_map_lexer.h  json_feature_map_lexer.ll  logval.h  sparse_vector.h
creg2/: README.md  creg2.py  iologreg.py
creg2/test_data/iris/: iris.trainfeat  labels.feat
jam-files/: sanity.jam
liblbfgs/: Makefile.am  lbfgs++.h
python/: __init__.py  _creg.cpp  _creg.pxd  _creg.pyx  creg.pyx  libcreg.pxd  linear.pxi  logistic.pxi  ordinal.pxi
sanity-checks/: README
sanity-checks/linear/: linear.R  mpg-train.txt
sanity-checks/ordinal/: ordinal.R  shuttle.txt
tools/: svd-on-x.py
